# typeinfo

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/typeinfo/: trait.TypeInfo.js
src/: lib.rs
src/typeinfo/: lib.rs.html
tests/: compile-test.rs  test.rs
tests/compile-fail/: empty-struct.rs  mixed-field-qualifiers.rs  mixed-struct-qualifiers.rs  non-pub-structs-fields.rs  non-pub-structs.rs  unit-struct.rs
typeinfo/: enum.Type.html  index.html  macro.def!.html  sidebar-items.js  struct.Field.html  trait.TypeInfo.html
typeinfo_derive/: Cargo.toml
typeinfo_derive/src/: lib.rs
typeinfo_derive/tests/: compile-test.rs  test.rs
typeinfo_derive/tests/compile-fail/: copy-trait.rs
