[package]
name = "pod-typeinfo"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["typeinfo", "pod", "type", "reflection"]
repository = "https://github.com/aldanor/pod-typeinfo"
homepage = "https://github.com/aldanor/pod-typeinfo"
description = """Runtime type information for POD types."""

[lib]
name = "pod_typeinfo"

[features]
unstable = ["compiletest_rs", "clippy"]

[dependencies]
compiletest_rs = {version = "^0.0.11", optional = true}
clippy = {version = "^0.0.37", optional = true}
