[package]
name = "typeinfo"
version = "0.1.1"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["typeinfo", "pod", "type", "reflection"]
repository = "https://github.com/aldanor/typeinfo"
homepage = "https://github.com/aldanor/typeinfo"
documentation = "https://docs.rs/typeinfo"
description = """Runtime type information for POD types."""

[lib]
name = "typeinfo"

[features]
default = []
unstable = ["compiletest_rs", "clippy"]

[dependencies]
compiletest_rs = {version = "*", optional = true}
clippy = {version = "*", optional = true}
